# idan-sys-mon

./: .gitignore  README.md  __init__.py  log.txt  pyproject.toml
docs/: design.md
src/: __init__.py  collector.py  display.py  logger.py  main.py
tests/: __init__.py  test_collector.py  test_logger.py
