[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idan-sys-mon"
version = "0.1.0"
description = "A real-time system monitoring tool for tracking CPU, memory, and disk usage"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["system", "monitoring", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "psutil>=5.9.0",
    "rich"
]